Release 1.20.2-pre1 (snapshot)