@@ -1,250 +1,47 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
+import java.util.Optional;
 
-public class od {
-   public static final aet<dwm> a = nw.a("village/taiga/town_centers");
-   private static final aet<dwm> b = nw.a("village/taiga/terminators");
-
-   public static void a(np<dwm> $$0) {
-      hh<duh> $$1 = $$0.a(je.ay);
-      hg<duh> $$2 = $$1.b(ph.h);
-      hg<duh> $$3 = $$1.b(ph.i);
-      hg<duh> $$4 = $$1.b(ph.e);
-      hg<duh> $$5 = $$1.b(ph.l);
-      hg<duh> $$6 = $$1.b(ph.m);
-      hh<dyu> $$7 = $$0.a(je.aA);
-      hg<dyu> $$8 = $$7.b(nx.f);
-      hg<dyu> $$9 = $$7.b(nx.d);
-      hg<dyu> $$10 = $$7.b(nx.k);
-      hg<dyu> $$11 = $$7.b(nx.o);
-      hh<dwm> $$12 = $$0.a(je.aC);
-      hg<dwm> $$13 = $$12.b(nw.a);
-      hg<dwm> $$14 = $$12.b(b);
+public interface od {
+   static void a(ns<dvo> $$0) {
+      hh<dvi> $$1 = $$0.a(je.az);
+      hh<cqt> $$2 = $$0.a(je.ap);
+      hg.c<dvo> $$3 = $$0.a(
+         dvb.a,
+         new dvo(
+            List.of(dvo.a($$1.b(dvc.t)), dvo.a($$1.b(dvc.u)), dvo.a($$1.b(dvc.v)), dvo.a($$1.b(dvc.w)), dvo.a($$1.b(dvc.x))), new dwd(34, 8, dwe.a, 10387312)
+         )
+      );
+      $$0.a(dvb.b, new dvo($$1.b(dvc.f), new dwd(32, 8, dwe.a, 14357617)));
+      $$0.a(dvb.c, new dvo($$1.b(dvc.g), new dwd(32, 8, dwe.a, 14357618)));
+      $$0.a(dvb.d, new dvo($$1.b(dvc.e), new dwd(32, 8, dwe.a, 14357619)));
+      $$0.a(dvb.e, new dvo($$1.b(dvc.j), new dwd(32, 8, dwe.a, 14357620)));
+      $$0.a(dvb.f, new dvo($$1.b(dvc.a), new dwd(ib.g, dwf.c.b, 0.2F, 165745296, Optional.of(new dwf.a($$3, 10)), 32, 8, dwe.a)));
+      $$0.a(dvb.q, new dvo($$1.b(dvc.F), new dwd(24, 8, dwe.a, 20083232)));
+      $$0.a(dvb.g, new dvo($$1.b(dvc.l), new dwd(32, 5, dwe.b, 10387313)));
+      $$0.a(dvb.h, new dvo($$1.b(dvc.d), new dwd(80, 20, dwe.b, 10387319)));
+      $$0.a(dvb.i, new dvo($$1.b(dvc.r), new dwd(new ib(9, 0, 9), dwf.c.c, 0.01F, 0, Optional.empty(), 1, 0, dwe.a)));
+      $$0.a(dvb.j, new dvo(List.of(dvo.a($$1.b(dvc.b)), dvo.a($$1.b(dvc.c))), new dwd(ib.g, dwf.c.d, 0.004F, 0, Optional.empty(), 1, 0, dwe.a)));
       $$0.a(
-         a,
-         new dwm(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/taiga/town_centers/taiga_meeting_point_1", $$8), 49),
-               Pair.of(dwk.a("village/taiga/town_centers/taiga_meeting_point_2", $$8), 49),
-               Pair.of(dwk.a("village/taiga/zombie/town_centers/taiga_meeting_point_1", $$9), 1),
-               Pair.of(dwk.a("village/taiga/zombie/town_centers/taiga_meeting_point_2", $$9), 1)
+         dvb.k,
+         new dvo(
+            List.of(
+               dvo.a($$1.b(dvc.y)),
+               dvo.a($$1.b(dvc.z)),
+               dvo.a($$1.b(dvc.A)),
+               dvo.a($$1.b(dvc.B)),
+               dvo.a($$1.b(dvc.C)),
+               dvo.a($$1.b(dvc.D)),
+               dvo.a($$1.b(dvc.E))
             ),
-            dwm.a.b
+            new dwd(40, 15, dwe.a, 34222645)
          )
       );
-      nw.a(
-         $$0,
-         "village/taiga/streets",
-         new dwm(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/taiga/streets/corner_01", $$10), 2),
-               Pair.of(dwk.a("village/taiga/streets/corner_02", $$10), 2),
-               Pair.of(dwk.a("village/taiga/streets/corner_03", $$10), 2),
-               Pair.of(dwk.a("village/taiga/streets/straight_01", $$10), 4),
-               Pair.of(dwk.a("village/taiga/streets/straight_02", $$10), 4),
-               Pair.of(dwk.a("village/taiga/streets/straight_03", $$10), 4),
-               Pair.of(dwk.a("village/taiga/streets/straight_04", $$10), 7),
-               Pair.of(dwk.a("village/taiga/streets/straight_05", $$10), 7),
-               Pair.of(dwk.a("village/taiga/streets/straight_06", $$10), 4),
-               Pair.of(dwk.a("village/taiga/streets/crossroad_01", $$10), 1),
-               Pair.of(dwk.a("village/taiga/streets/crossroad_02", $$10), 1),
-               Pair.of(dwk.a("village/taiga/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(dwk.a("village/taiga/streets/crossroad_04", $$10), 2),
-                  Pair.of(dwk.a("village/taiga/streets/crossroad_05", $$10), 2),
-                  Pair.of(dwk.a("village/taiga/streets/crossroad_06", $$10), 2),
-                  Pair.of(dwk.a("village/taiga/streets/turn_01", $$10), 3)
-               }
-            ),
-            dwm.a.a
-         )
-      );
-      nw.a(
-         $$0,
-         "village/taiga/zombie/streets",
-         new dwm(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/taiga/zombie/streets/corner_01", $$10), 2),
-               Pair.of(dwk.a("village/taiga/zombie/streets/corner_02", $$10), 2),
-               Pair.of(dwk.a("village/taiga/zombie/streets/corner_03", $$10), 2),
-               Pair.of(dwk.a("village/taiga/zombie/streets/straight_01", $$10), 4),
-               Pair.of(dwk.a("village/taiga/zombie/streets/straight_02", $$10), 4),
-               Pair.of(dwk.a("village/taiga/zombie/streets/straight_03", $$10), 4),
-               Pair.of(dwk.a("village/taiga/zombie/streets/straight_04", $$10), 7),
-               Pair.of(dwk.a("village/taiga/zombie/streets/straight_05", $$10), 7),
-               Pair.of(dwk.a("village/taiga/zombie/streets/straight_06", $$10), 4),
-               Pair.of(dwk.a("village/taiga/zombie/streets/crossroad_01", $$10), 1),
-               Pair.of(dwk.a("village/taiga/zombie/streets/crossroad_02", $$10), 1),
-               Pair.of(dwk.a("village/taiga/zombie/streets/crossroad_03", $$10), 2),
-               new Pair[]{
-                  Pair.of(dwk.a("village/taiga/zombie/streets/crossroad_04", $$10), 2),
-                  Pair.of(dwk.a("village/taiga/zombie/streets/crossroad_05", $$10), 2),
-                  Pair.of(dwk.a("village/taiga/zombie/streets/crossroad_06", $$10), 2),
-                  Pair.of(dwk.a("village/taiga/zombie/streets/turn_01", $$10), 3)
-               }
-            ),
-            dwm.a.a
-         )
-      );
-      nw.a(
-         $$0,
-         "village/taiga/houses",
-         new dwm(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/taiga/houses/taiga_small_house_1", $$8), 4),
-               Pair.of(dwk.a("village/taiga/houses/taiga_small_house_2", $$8), 4),
-               Pair.of(dwk.a("village/taiga/houses/taiga_small_house_3", $$8), 4),
-               Pair.of(dwk.a("village/taiga/houses/taiga_small_house_4", $$8), 4),
-               Pair.of(dwk.a("village/taiga/houses/taiga_small_house_5", $$8), 4),
-               Pair.of(dwk.a("village/taiga/houses/taiga_medium_house_1", $$8), 2),
-               Pair.of(dwk.a("village/taiga/houses/taiga_medium_house_2", $$8), 2),
-               Pair.of(dwk.a("village/taiga/houses/taiga_medium_house_3", $$8), 2),
-               Pair.of(dwk.a("village/taiga/houses/taiga_medium_house_4", $$8), 2),
-               Pair.of(dwk.a("village/taiga/houses/taiga_butcher_shop_1", $$8), 2),
-               Pair.of(dwk.a("village/taiga/houses/taiga_tool_smith_1", $$8), 2),
-               Pair.of(dwk.a("village/taiga/houses/taiga_fletcher_house_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(dwk.a("village/taiga/houses/taiga_shepherds_house_1", $$8), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_armorer_house_1", $$8), 1),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_armorer_2", $$8), 1),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_fisher_cottage_1", $$8), 3),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_tannery_1", $$8), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_cartographer_house_1", $$8), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_library_1", $$8), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_masons_house_1", $$8), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_weaponsmith_1", $$8), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_weaponsmith_2", $$8), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_temple_1", $$8), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_large_farm_1", $$11), 6),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_large_farm_2", $$11), 6),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_small_farm_1", $$8), 1),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_animal_pen_1", $$8), 2),
-                  Pair.of(dwk.g(), 6)
-               }
-            ),
-            dwm.a.b
-         )
-      );
-      nw.a(
-         $$0,
-         "village/taiga/zombie/houses",
-         new dwm(
-            $$14,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_small_house_1", $$9), 4),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_small_house_2", $$9), 4),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_small_house_3", $$9), 4),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_small_house_4", $$9), 4),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_small_house_5", $$9), 4),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_medium_house_1", $$9), 2),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_medium_house_2", $$9), 2),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_medium_house_3", $$9), 2),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_medium_house_4", $$9), 2),
-               Pair.of(dwk.a("village/taiga/houses/taiga_butcher_shop_1", $$9), 2),
-               Pair.of(dwk.a("village/taiga/zombie/houses/taiga_tool_smith_1", $$9), 2),
-               Pair.of(dwk.a("village/taiga/houses/taiga_fletcher_house_1", $$9), 2),
-               new Pair[]{
-                  Pair.of(dwk.a("village/taiga/zombie/houses/taiga_shepherds_house_1", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_armorer_house_1", $$9), 1),
-                  Pair.of(dwk.a("village/taiga/zombie/houses/taiga_fisher_cottage_1", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_tannery_1", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/zombie/houses/taiga_cartographer_house_1", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/zombie/houses/taiga_library_1", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_masons_house_1", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_weaponsmith_1", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/zombie/houses/taiga_weaponsmith_2", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/zombie/houses/taiga_temple_1", $$9), 2),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_large_farm_1", $$9), 6),
-                  Pair.of(dwk.a("village/taiga/zombie/houses/taiga_large_farm_2", $$9), 6),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_small_farm_1", $$9), 1),
-                  Pair.of(dwk.a("village/taiga/houses/taiga_animal_pen_1", $$9), 2),
-                  Pair.of(dwk.g(), 6)
-               }
-            ),
-            dwm.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new dwm(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/plains/terminators/terminator_01", $$10), 1),
-               Pair.of(dwk.a("village/plains/terminators/terminator_02", $$10), 1),
-               Pair.of(dwk.a("village/plains/terminators/terminator_03", $$10), 1),
-               Pair.of(dwk.a("village/plains/terminators/terminator_04", $$10), 1)
-            ),
-            dwm.a.a
-         )
-      );
-      nw.a(
-         $$0,
-         "village/taiga/decor",
-         new dwm(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/taiga/taiga_lamp_post_1"), 10),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_5"), 2),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_6"), 1),
-               Pair.of(dwk.a($$2), 4),
-               Pair.of(dwk.a($$3), 4),
-               Pair.of(dwk.a($$4), 2),
-               Pair.of(dwk.a($$5), 4),
-               Pair.of(dwk.a($$6), 1),
-               new Pair[]{Pair.of(dwk.g(), 4)}
-            ),
-            dwm.a.b
-         )
-      );
-      nw.a(
-         $$0,
-         "village/taiga/zombie/decor",
-         new dwm(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/taiga/taiga_decoration_1"), 4),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_2"), 1),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_3"), 1),
-               Pair.of(dwk.a("village/taiga/taiga_decoration_4"), 1),
-               Pair.of(dwk.a($$2), 4),
-               Pair.of(dwk.a($$3), 4),
-               Pair.of(dwk.a($$4), 2),
-               Pair.of(dwk.a($$5), 4),
-               Pair.of(dwk.a($$6), 1),
-               Pair.of(dwk.g(), 4)
-            ),
-            dwm.a.b
-         )
-      );
-      nw.a(
-         $$0,
-         "village/taiga/villagers",
-         new dwm(
-            $$13,
-            ImmutableList.of(
-               Pair.of(dwk.a("village/taiga/villagers/nitwit"), 1),
-               Pair.of(dwk.a("village/taiga/villagers/baby"), 1),
-               Pair.of(dwk.a("village/taiga/villagers/unemployed"), 10)
-            ),
-            dwm.a.b
-         )
-      );
-      nw.a(
-         $$0,
-         "village/taiga/zombie/villagers",
-         new dwm(
-            $$13,
-            ImmutableList.of(Pair.of(dwk.a("village/taiga/zombie/villagers/nitwit"), 1), Pair.of(dwk.a("village/taiga/zombie/villagers/unemployed"), 10)),
-            dwm.a.b
-         )
-      );
+      $$0.a(dvb.l, new dvo(List.of(dvo.a($$1.b(dvc.h)), dvo.a($$1.b(dvc.i))), new dwd(24, 4, dwe.a, 165745295)));
+      $$0.a(dvb.m, new dvo(List.of(dvo.a($$1.b(dvc.m)), dvo.a($$1.b(dvc.n))), new dwd(20, 8, dwe.a, 14357621)));
+      $$0.a(dvb.n, new dvo(List.of(dvo.a($$1.b(dvc.o), 2), dvo.a($$1.b(dvc.s), 3)), new dwd(27, 4, dwe.a, 30084232)));
+      $$0.a(dvb.o, new dvo($$1.b(dvc.p), new dwd(2, 1, dwe.a, 14357921)));
+      $$0.a(dvb.p, new dvo($$1.b(dvc.q), new dwd(20, 11, dwe.b, 10387313)));
+      $$0.a(dvb.r, new dvo($$1.b(dvc.k), new dwc(32, 3, 128, $$2.b(aps.o))));
+      $$0.a(dvb.s, new dvo($$1.b(dvc.G), new dwd(34, 8, dwe.a, 83469867)));
    }
 }
