@@ -1,53 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class or {
-   public static final aet<dne<?, ?>> a = op.a("delta");
-   public static final aet<dne<?, ?>> b = op.a("small_basalt_columns");
-   public static final aet<dne<?, ?>> c = op.a("large_basalt_columns");
-   public static final aet<dne<?, ?>> d = op.a("basalt_blobs");
-   public static final aet<dne<?, ?>> e = op.a("blackstone_blobs");
-   public static final aet<dne<?, ?>> f = op.a("glowstone_extra");
-   public static final aet<dne<?, ?>> g = op.a("crimson_forest_vegetation");
-   public static final aet<dne<?, ?>> h = op.a("crimson_forest_vegetation_bonemeal");
-   public static final aet<dne<?, ?>> i = op.a("warped_forest_vegetation");
-   public static final aet<dne<?, ?>> j = op.a("warped_forest_vegetation_bonemeal");
-   public static final aet<dne<?, ?>> k = op.a("nether_sprouts");
-   public static final aet<dne<?, ?>> l = op.a("nether_sprouts_bonemeal");
-   public static final aet<dne<?, ?>> m = op.a("twisting_vines");
-   public static final aet<dne<?, ?>> n = op.a("twisting_vines_bonemeal");
-   public static final aet<dne<?, ?>> o = op.a("weeping_vines");
-   public static final aet<dne<?, ?>> p = op.a("patch_crimson_roots");
-   public static final aet<dne<?, ?>> q = op.a("basalt_pillar");
-   public static final aet<dne<?, ?>> r = op.a("spring_lava_nether");
-   public static final aet<dne<?, ?>> s = op.a("spring_nether_closed");
-   public static final aet<dne<?, ?>> t = op.a("spring_nether_open");
-   public static final aet<dne<?, ?>> u = op.a("patch_fire");
-   public static final aet<dne<?, ?>> v = op.a("patch_soul_fire");
+   public static final aew<dnj<?, ?>> a = os.a("end_spike");
+   public static final aew<dnj<?, ?>> b = os.a("end_gateway_return");
+   public static final aew<dnj<?, ?>> c = os.a("end_gateway_delayed");
+   public static final aew<dnj<?, ?>> d = os.a("chorus_plant");
+   public static final aew<dnj<?, ?>> e = os.a("end_island");
 
-   public static void a(np<dne<?, ?>> $$0) {
-      op.a($$0, a, dnr.Z, new dpr(csr.H.n(), csr.kJ.n(), bge.a(3, 7), bge.a(0, 2)));
-      op.a($$0, b, dnr.Y, new dpp(bfv.a(1), bge.a(1, 4)));
-      op.a($$0, c, dnr.Y, new dpp(bge.a(2, 3), bge.a(5, 10)));
-      op.a($$0, d, dnr.aa, new dqk(csr.dW.n(), csr.dZ.n(), bge.a(3, 7)));
-      op.a($$0, e, dnr.aa, new dqk(csr.dW.n(), csr.pr.n(), bge.a(3, 7)));
-      op.a($$0, f, dnr.t);
-      dsg $$1 = new dsg(bfd.<dfe>a().a(csr.oD.n(), 87).a(csr.ox.n(), 11).a(csr.oo.n(), 1));
-      op.a($$0, g, dnr.V, new dqb($$1, 8, 4));
-      op.a($$0, h, dnr.V, new dqb($$1, 3, 1));
-      dsg $$2 = new dsg(bfd.<dfe>a().a(csr.oq.n(), 85).a(csr.oD.n(), 1).a(csr.oo.n(), 13).a(csr.ox.n(), 1));
-      op.a($$0, i, dnr.V, new dqb($$2, 8, 4));
-      op.a($$0, j, dnr.V, new dqb($$2, 3, 1));
-      op.a($$0, k, dnr.V, new dqb(drw.a(csr.or), 8, 4));
-      op.a($$0, l, dnr.V, new dqb(drw.a(csr.or), 3, 1));
-      op.a($$0, m, dnr.X, new dqs(8, 4, 8));
-      op.a($$0, n, dnr.X, new dqs(3, 1, 2));
-      op.a($$0, o, dnr.W);
-      op.a($$0, p, dnr.i, op.a(dnr.S, new dqn(drw.a(csr.oD))));
-      op.a($$0, q, dnr.ad);
-      op.a($$0, r, dnr.k, new dqq(eai.e.g(), true, 4, 1, hk.a(csq::q, csr.dW, csr.dX, csr.L, csr.kJ, csr.pr)));
-      op.a($$0, s, dnr.k, new dqq(eai.e.g(), false, 5, 0, hk.a(csq::q, csr.dW)));
-      op.a($$0, t, dnr.k, new dqq(eai.e.g(), false, 4, 1, hk.a(csq::q, csr.dW)));
-      op.a($$0, u, dnr.i, op.a(dnr.S, new dqn(drw.a(csr.cr)), List.of(csr.dW)));
-      op.a($$0, v, dnr.i, op.a(dnr.S, new dqn(drw.a(csr.cs)), List.of(csr.dY)));
+   public static void a(ns<dnj<?, ?>> $$0) {
+      os.a($$0, a, dnw.J, new dqu(false, ImmutableList.of(), null));
+      os.a($$0, b, dnw.L, dpz.a(akr.a, true));
+      os.a($$0, c, dnw.L, dpz.a());
+      os.a($$0, d, dnw.l);
+      os.a($$0, e, dnw.K);
    }
 }
